k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baeksungbus-web
  namespace: baeksungbus
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - bs.baeksung.kr
      secretName: baeksungbus-tls
  rules:
    - host: bs.baeksung.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: baeksungbus-web
                port:
                  number: 4173
